--- a/force-app/main/default/classes/cc_adyencc_hk_Payment.cls
+++ b/force-app/main/default/classes/cc_adyencc_hk_Payment.cls
@@ -7,29 +7,29 @@ global class cc_adyencc_hk_Payment extends ccrz.cc_hk_Payment {
 //        //if success, resul=true
 //        //if not, result=false
 //
-//        ccrz__E_StoredPayment__c storedPayment = Selector.getStoredPayment((String)inputData.get(ccrz.cc_hk_Payment.PARAM_STORED_PAYMENT_ID));
-//        Boolean useCache = !Test.isRunningTest();
-//        Map<String, Object> mapAdyenParams = Util.getCCConfig('pmt_adyencc', storedPayment.ccrz__Storefront__c, true, useCache);
-//        Map<String, String> mapConfigs = (Map<String,String>)mapAdyenParams.get(ccrz.ccAPIConfig.CONFIGURATIONS);
-//        Merchant__mdt merchant = Util.getConfigByName(mapConfigs.get('pmt_adyencc.config'));
-//
-//        if(storedPayment.ccrz__AccountType__c == 'adyencc')
-//        {
-//            DisableRequest disableRequest = AdyenUtil.disableStoredPayment(storedPayment, merchant);
-//            DisableResponse disableResponse = AdyenInterface.disablePaymentMethod(merchant.Name__c, disableRequest);
-//
-//            if(disableResponse.success)
-//            {
-//                returnData = super.removeStoredPayment(inputData);
-//            }
-//            else
-//            {
-//                returnData.put('result', false);
-//            }
-//        }
-//        else {
-//            returnData = super.removeStoredPayment(inputData);
-//        }
+////        ccrz__E_StoredPayment__c storedPayment = Selector.getStoredPayment((String)inputData.get(ccrz.cc_hk_Payment.PARAM_STORED_PAYMENT_ID));
+////        Boolean useCache = !Test.isRunningTest();
+////        Map<String, Object> mapAdyenParams = Util.getCCConfig('pmt_adyencc', storedPayment.ccrz__Storefront__c, true, useCache);
+////        Map<String, String> mapConfigs = (Map<String,String>)mapAdyenParams.get(ccrz.ccAPIConfig.CONFIGURATIONS);
+////        Merchant__mdt merchant = Util.getConfigByName(mapConfigs.get('pmt_adyencc.config'));
+////
+////        if(storedPayment.ccrz__AccountType__c == 'adyencc')
+////        {
+////            DisableRequest disableRequest = AdyenUtil.disableStoredPayment(storedPayment, merchant);
+////            DisableResponse disableResponse = AdyenInterface.disablePaymentMethod(merchant.Name__c, disableRequest);
+////
+////            if(disableResponse.success)
+////            {
+////                returnData = super.removeStoredPayment(inputData);
+////            }
+////            else
+////            {
+////                returnData.put('result', false);
+////            }
+////        }
+////        else {
+////            returnData = super.removeStoredPayment(inputData);
+////        }
 //
 //        return returnData;
 //    }
