--- a/force-app/main/default/classes/AdyenReturn.cls
+++ b/force-app/main/default/classes/AdyenReturn.cls
@@ -3,7 +3,6 @@ public with sharing class AdyenReturn {
         String redirectResult = ApexPages.currentPage().getParameters().get('redirectResult');
         String payload = ApexPages.currentPage().getParameters().get('payload');
         String merchantReference = ApexPages.currentPage().getParameters().get('merchantReference');
-
         //Get details from the querystring
         Map<String, String> details = getDetails(redirectResult, payload);
         PaymentsResponse paymentsDetailsResponse = AdyenPaymentsDetails.requestAfterRedirect(details, merchantReference);
@@ -15,15 +14,14 @@ public with sharing class AdyenReturn {
                 Map<String, Object> orderResult = AdyenController.placeOrder(paymentResult, merchantReference);
                 Map<String, String> orderIds = AdyenController.validateOrderResult(orderResult);
                 String orderId = orderIds.get('orderIdEnc');
-                //TODOBAS retrieve community URL
-                PageReference pageRef = new PageReference('https://componentsdev0221-developer-edition.na150.force.com/ccrz__OrderConfirmation?o=' + orderId);
+                PageReference pageRef = new PageReference(Site.getBaseSecureUrl() + '/ccrz__OrderConfirmation?o=' + orderId);
                 pageRef.setRedirect(true);
                 return pageRef;
             }
         }
 
         //TODOBAS add Payment Failed error message
-        PageReference pageReference = new PageReference('https://componentsdev0221-developer-edition.na150.force.com/ccrz__CheckoutNew?cartID=' + merchantReference);
+        PageReference pageReference = new PageReference(Site.getBaseSecureUrl() + '/ccrz__CheckoutNew?cartID=' + merchantReference);
         pageReference.setRedirect(true);
         return pageReference;
     }
