--- a/force-app/main/default/classes/AdyenService.cls
+++ b/force-app/main/default/classes/AdyenService.cls
@@ -1,25 +1,27 @@
 @RestResource(urlMapping='/AdyenService/*')
-global with sharing class AdyenService {
+global without sharing class AdyenService {
     @HttpPost
     global static String adyenPaymentsDetails(){
         String stateData = RestContext.request.requestBody.toString();
         Map<String, Object> requestData = (Map<String, Object>)JSON.deserializeUntyped(stateData);
-
-        PaymentsResponse paymentsDetailsResponse = AdyenPaymentsDetails.requestFromStateData(stateData);
-        Map<String, Object> paymentResult = AdyenResponseHandler.handleResponse(paymentsDetailsResponse);
-
-        Boolean orderSuccess = false;
         String cartId = (String)requestData.get('cartId');
+        ccrz.cc_hk_Payment paymentHook = ccrz.cc_hk_Payment.getInstance(null);
+        Map<String, Object> paymentProcessorInput = AdyenController.createProcessorInput(cartId, stateData, 'paymentsDetails');
+        Map<String, Object> processResult = paymentHook.processPayment(paymentProcessorInput);
+        Boolean orderSuccess = false;
+        Map<String, Object> paymentResult = (Map<String, Object>) processResult.get('paymentResult');
 
-        if((Boolean)paymentResult.get('isFinal') && paymentsDetailsResponse.merchantReference == cartId){
-            if (String.valueOf(paymentResult.get('resultCode')) == 'AUTHORISED') {
-                //TODOBAS place order success=false
-                Map<String, Object> orderResult = AdyenController.placeOrder(paymentResult, cartId);
+        if (paymentResult.get('resultCode') == PaymentsResponse.ResultCodeEnum.AUTHORISED) {
+            String merchantReference = (String)paymentResult.get('merchantReference');
+            if(merchantReference == cartId){
+                //create order
+                Map<String, Object> orderResult = AdyenController.placeOrder(processResult, cartId);
                 Map<String, String> orderIds = AdyenController.validateOrderResult(orderResult);
                 //Return orderId for confirmation page
                 paymentResult.put('orderIdEnc', orderIds.get('orderIdEnc'));
                 orderSuccess = true;
             }
+            System.error('Invalid merchantReference: ' + merchantReference);
         }
 
         paymentResult.put('orderSuccess', orderSuccess);
